teleport/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: teleport-proxy
  namespace: teleport
  labels:
    app.kubernetes.io/name: teleport
    app.kubernetes.io/component: proxy
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: teleport
      app.kubernetes.io/component: proxy
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: teleport
        app.kubernetes.io/component: proxy
    spec:
      automountServiceAccountToken: true
      containers:
      - name: teleport
        image: "quay.io/cybozu/teleport:4.0.2.2"
        imagePullPolicy: IfNotPresent
        args:
        - start
        - --roles=proxy
        - -c
        - /etc/teleport/teleport.yaml
        ports:
        - name: proxyssh
          containerPort: 3023
        - name: proxytunnel
          containerPort: 3024
        - name: proxykube
          containerPort: 3026
        - name: proxyweb
          containerPort: 3080
        volumeMounts:
        - mountPath: /var/lib/certs
          name: teleport-tls-web
          readOnly: true
        - mountPath: /etc/teleport
          name: teleport-secret
          readOnly: true
        - mountPath: /var/lib/teleport
          name: teleport-storage
        - mountPath: /var/lib/ca-certs
          name: ca-certs
          readOnly: true
      securityContext:
        runAsNonRoot: true
        runAsUser: 10000
      volumes:
      - name: teleport-tls-web
        secret:
          secretName: tls-web
      - name: teleport-secret
        secret:
          secretName: teleport-secret
      - name: teleport-storage
        emptyDir: {}
      - configMap:
          name: ca-certs
        name: ca-certs
      serviceAccountName: teleport
