teleport/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: teleport-auth
  namespace: teleport
  labels:
    app.kubernetes.io/name: teleport
    app.kubernetes.io/component: auth
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: teleport
      app.kubernetes.io/component: auth
  serviceName: teleport-auth
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: teleport
        app.kubernetes.io/component: auth
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: teleport
        image: "quay.io/cybozu/teleport:4.0.2.2"
        imagePullPolicy: IfNotPresent
        args:
        - start
        - --roles=auth
        - -c
        - /etc/teleport/teleport.yaml
        ports:
        - name: authssh
          containerPort: 3025
        volumeMounts:
        - mountPath: /var/lib/certs
          name: teleport-tls-web
          readOnly: true
        - mountPath: /etc/teleport
          name: teleport-secret
          readOnly: true
        - mountPath: /var/lib/teleport
          name: teleport-storage
        - mountPath: /var/lib/ca-certs
          name: ca-certs
          readOnly: true
      securityContext:
        runAsNonRoot: true
        runAsUser: 10000
      volumes:
      - name: teleport-storage
        emptyDir: {}
      - name: teleport-secret
        secret:
          secretName: teleport-secret
      - name: teleport-tls-web
        secret:
          secretName: tls-web
      - configMap:
          name: ca-certs
        name: ca-certs
      serviceAccountName: teleport
