teleport/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: teleport
  labels:
    app.kubernetes.io/name: teleport
spec:
  type: ClusterIP
  ports:
    - name: authssh
      port: 3025
      protocol: TCP
      targetPort: 3025

    - name: proxykube
      port: 3026
      protocol: TCP
      targetPort: 3026

    - name: proxyssh
      port: 3023
      protocol: TCP
      targetPort: 3023

    - name: proxytunnel
      port: 3024
      protocol: TCP
      targetPort: 3024

    - name: proxyweb
      port: 3080
      protocol: TCP
      targetPort: 3080

  selector:
    app.kubernetes.io/name: teleport
