teleport/base/ingressroute.yaml
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: tls
  namespace: bastion
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  virtualhost:
    fqdn: teleport.gcp0.dev-ne.co
    tls:
      secretName: teleport-tls
  routes:
    - match: /
      services:
        - name: teleport
          port: 3080
